docs/assets/css/custom.css
a:hover {
    text-decoration: underline;
}

.img-caption {
    text-align: center;
    margin-top: -20px;
    color: #666;
    font-size: 16px;
}

/* Image grid */
.image-grid {
    display: flex;
    flex: 1 1 100%;
    flex-direction: column;
    flex-wrap: wrap;
    margin: 15px 0;
}
.image-grid .image-card {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 98%;
    margin-top: 10px;
    padding: 5px;
}
.image-grid .image-card:hover {
    background-color: #99999924;
}
.image-grid .image-card a {
    color: #676767;
}
.image-grid .image-card a:hover {
    color: #676767;
}
.image-grid .image-card figure:hover {
    background: none;
}
.image-grid .image-card figcaption {
    color: #676767;
    font-size: 13px;
    text-align: center;
    margin-top: 10px;
    margin-bottom: 0px;
}
.image-grid .image-card figcaption:hover {
    color: #676767;
}
.image-grid img {
    margin: 0 auto !important;
    width: 100%;
    vertical-align: middle;
}
@media (min-width: 576px) {
    .image-grid {
        flex-direction: row;
    }
    .image-grid .image-card {
        width: 250px;
    }
    .image-grid img {
        padding-bottom: 0;
    }
}

/* Terminal */
p.code-header {
    color: #3c3c3c;
    background-color: rgba(219, 219, 219, 0.8);
    margin: 1em 0 -1.2em;
    padding: 0.1em 1em;
    font-size: 0.8em;
    font-family: "Roboto Mono", "Courier New", Courier, monospace;
}

pre {
    overflow: auto;
}

pre .code-noselect {
    color: #aaa;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

